# global-chess-challenge

./: .gitignore  00-DataAnalysis.ipynb  01-FormatTrainingData.ipynb  README.md  analyze_data.py  demo_input_output.py  evaluations.md  extract_evaluations_raw.py  extract_move_sequences.py  extract_puzzles.py  launch.sh  main.py  push_full_model.py  pyproject.toml  qwen_prompt.jinja  run_vllm.sh  test_grpo_setup.py  test_stockfish_reward.py  tox.ini  train_chess_grpo.ipynb  train_grpo.py  train_grpo_sft.py  train_sft_conversation.py  train_sft_fullsequences.py  train_sft_sequences.py  train_sft_single.py  train_sft_warmup.py
docs/: COMPETITION_STRATEGY.md  ChessPlayer.md  FIRST_ANALYSIS.md  GRPO_SFT_TRAINING.md  INPUT_OUTPUT_EXPLAINED.md  PROJECT_STRUCTURE.md  STOCKFISH_REWARDS.md  puzzles.md
src/: config.py  data.py  prompts.py  rewards.py  sft_data.py  tokenizer_utils.py  utils.py
