[project]
name = "global-chess-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aicrowd-cli>=0.1.18",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "flask>=3.1.2",
    "huggingface-hub>=0.24.0",
    "jinja2>=3.1.6",
    "mypy>=1.0.0",
    "openai>=1.0.0",
    "p-tqdm>=1.4.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-chess>=1.999",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "stockfish>=3.28.0",
    "trueskill>=0.4.5",
]
