[project]
name = "global-chess-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "aicrowd-cli>=0.1.18",
    "bitsandbytes>=0.49.0",
    "black>=23.0.0",
    "datasets>=4.4.2",
    "deepspeed>=0.18.3",
    "flake8>=6.0.0",
    "flask>=3.1.2",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.24.0",
    "jinja2>=3.1.6",
    "mypy>=1.0.0",
    "openai>=1.0.0",
    "p-tqdm>=1.4.0",
    "peft>=0.18.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-chess>=1.999",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "stockfish>=3.28.0",
    "torch>=2.9.0",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "trueskill>=0.4.5",
    "vllm>=0.13.0",
    "zstandard>=0.25.0",
]
